-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.3, 6.7.3, 6.8.5, 6.9.3, 6.10.0
-
None
-
3
-
f2ea9d8dc (dev), 986adb5a3 (6.10), 73fa4cf20 (6.10)
-
Foundation Sprint 142, Foundation Sprint 143
Looks like e07710007b4cf9c0665ac9d5c2b6c7ef588aae0a broke the basic exception guarantee when dropping uninitialized_copy for a manual loop that does not destroy copied elements on exception.
Should be easy to fix, except that the code has been changed and moved so many times since its inception that cherry-picking will be a nightmare.
| For Gerrit Dashboard: QTBUG-141899 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 691483,1 | QArrayData: fix exception safety in assign() | dev | qt/qtbase | Status: NEW | 0 | 0 |
| 690682,3 | QString::assign: mark the projection lambda noexcept | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 690683,5 | QArrayData: fix exception safety in assign() | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 690977,3 | QString::assign: mark the projection lambda noexcept | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 691297,2 | QArrayData: fix exception safety in assign() | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |